--- a/.tugboat/config.yml
+++ b/.tugboat/config.yml
@@ -20,4 +20,4 @@ services:
         # Link the document root to the expected path. Tugboat uses /docroot
         # by default. So, if the root is located at any other path in your git
         # repository, change that here. This example links /web to the docroot
-        - open ../index.html
+        - ln -snf "../card-game" "${DOCROOT}"
